examples/test/testpolicy3846.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3846
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key18: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value10
          key36: value28
      podSelector:
        matchLabels:
          key8: value32
          key33: value23
          key39: value16
